# fastapi-setup

./: .coveragerc  .env.example  .gitignore  Dockerfile  PLAYBOOK.md  README.md  app.db  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh
app/: llm.py  main.py  practise.py
app/api/v1/: api.py  posts.py
app/core/: config.py
app/db/: session.py
app/models/: ai.py  post.py  post_repo_db.py  user.py
app/repositories/: post_repo.py  post_repo_db.py
app/schemas/: llm.py  post.py
migrations/: env.py
migrations/versions/: 04674d48da57_create_posts.py  11b14715966d_add_ai_table.py  230951494fb4_create_posts.py  37ad246ce047_add_author_field_to_posts.py  40a2205c66ce_create_posts_table.py  812b4976eb26_add_ai_table_column.py  98b8eb91d7b4_create_users_table.py
scripts/: check.sh  migrate.sh  reset-db.sh  run.sh  setup.sh  test.sh
tests/: conftest.py  test_config.py  test_llm.py  test_main.py
